salesforce/force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>One parcel. A purchase can ship in several parcels, which is why confirmation is tracked per shipment.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHP-{0000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>