salesforce/force-app/main/default/objects/Shipment__c/fields/AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB__c</fullName>
    <description>Airway bill / tracking number, exactly as it appears in the source. Never invented. Unique so the same parcel is never tracked twice.</description>
    <label>AWB</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>