salesforce/force-app/main/default/objects/Shipment__c/fields/Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Confirmation__c</fullName>
    <description>Gitanjali's own confirmation, which is the thing that actually matters. A courier saying 'delivered' only sets this to Pending.</description>
    <label>Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>