salesforce/force-app/main/default/objects/Shipment__c/fields/Confirmation_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Reminders__c</fullName>
    <description>How many confirm-delivery nudges have been sent. Capped by the scheduler.</description>
    <label>Confirmation Reminders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>