salesforce/force-app/main/default/objects/Shipment__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <description>Ekart, Delhivery, Blue Dart, Amazon Shipping, India Post, Shadowfax, XpressBees, Other.</description>
    <label>Courier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>