salesforce/force-app/main/default/objects/Shipment__c/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <description>When the courier claims it was delivered.</description>
    <label>Delivered At</label>
    <type>DateTime</type>
</CustomField>